--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <div class="main"> 
 
-    <h3 id="table-heading">Whatggit you need</h3>
+    <h3 id="table-heading">What you need</h3>
 
 
     <table class="table-settings">
